<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


<LinearLayout
    android:layout_margin="30dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_horizontal">
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/product_catagory"/>
    <Button
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/select_button"/>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<EditText
    android:id="@+id/pType"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/hint_product_name"/>


</LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/product_spacification"/>
        <Button
            android:id="@+id/productCatagory"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/select_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/pSubType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_product_catagory"/>


    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/product_name"/>

        <Button
            android:id="@+id/product_Specifiaction"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/select_button" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/proN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_product_sub_catagory"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/nextpage"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/nextpage"/>


        <Button
            android:id="@+id/productDetailSave"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="100dp"
            android:text="@string/about_product_confirmation"/>
    </LinearLayout>


</LinearLayout>