<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/facbric_settings"
        android:textAlignment="center"
        android:textSize="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/matrial_name"
            android:textAlignment="center"
            android:textSize="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="horizontal"
            >


            <TextView
                android:id="@+id/t2"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/t3"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/t4"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"


                />
            <TextView
                android:id="@+id/t5"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"


                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:gravity="center"
                android:text="@string/code"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"

                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:gravity="center"
                android:text="@string/material_type"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/material"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:gravity="center"
                android:text="@string/count"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/suta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"

                android:textSize="20sp" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:gravity="center"
                android:text="@string/dying"
                android:textSize="20sp" />
<!--            <TextView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:gravity="center"-->
<!--                android:text="code"-->
<!--                android:textSize="20sp" />-->
            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center">
                <RadioButton
                    android:id="@+id/radio_id1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/YES"/>
                <RadioButton
                    android:id="@+id/radio_id2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/NO"/>
            </RadioGroup>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:gravity="center"
                android:text="@string/lamination"
                android:textSize="20sp" />
            <RadioGroup
                android:id="@+id/radiogroup2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center">
                <RadioButton
                    android:id="@+id/radiobtn2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/YES"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/NO"/>
            </RadioGroup>




        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:gravity="center"
                android:text="@string/bohor"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/bohor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"

                android:textSize="20sp" />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:gravity="center"
                android:text="@string/proti_goj"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/gojmullo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp" />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".75"
                android:gravity="center"
                android:text="@string/wastage"
                android:textSize="20sp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/seekbartv1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".75"
                    android:gravity="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/waste"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".25"
                    android:gravity="center"
                    android:text="100%"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".75"
                android:gravity="center"
                android:text="@string/flactuation"
                android:textSize="20sp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <SeekBar
                    android:id="@+id/seekbartv2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".75"
                    android:gravity="center"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/flactiation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".25"
                    android:gravity="center"
                    android:text="100%"
                    android:textSize="20sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:gravity="center"
                android:text="@string/brand"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/brand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"

                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:gravity="center"
                android:text="@string/color"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"

                android:textSize="20sp" />

        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:orientation="horizontal"
    android:gravity="center">
    <Button
        android:id="@+id/save"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:text="@string/save"/>
</LinearLayout>
    </LinearLayout>
</LinearLayout>
